// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`gitDiff should include line numbers when requested 1`] = `
{
  "message": {
    "type": "text",
    "value": 
"<diff file="src/test.ts">
@@ -10,3 +10,3 @@
 context line
-old line [Line 11 removed]
+new line [Line 11]
</diff>"
,
  },
  "type": "Reply",
}
`;

exports[`gitDiff should not include line numbers by default 1`] = `
{
  "message": {
    "type": "text",
    "value": 
"<diff file="src/test.ts">
@@ -10,3 +10,3 @@
 context line
-old line
+new line
</diff>"
,
  },
  "type": "Reply",
}
`;

exports[`gitDiff should handle no diff found 1`] = `
{
  "message": {
    "type": "text",
    "value": "No diff found.",
  },
  "type": "Reply",
}
`;

exports[`gitDiff should handle command errors 1`] = `
{
  "message": {
    "type": "error-text",
    "value": 
"\`git diff --no-color -U5 -- 'src/test.ts'\` exited with code 1:
error message"
,
  },
  "type": "Error",
}
`;

exports[`gitDiff should handle missing executeCommand 1`] = `
{
  "message": {
    "type": "error-text",
    "value": "Not possible to execute command. Abort.",
  },
  "type": "Error",
}
`;
